final commit with all required files

--- a/public/PO.html
+++ b/public/PO.html
@@ -35,7 +35,7 @@ function fetchAndDisplayPurchaseOrders545() {
       table.classList.add('purchase-orders-table');
 
       // Create table headers
-      const headers = ['Purchase Order Number', 'Client ID', 'Date', 'Total Amount'];
+      const headers = ['Purchase Order Number', 'Client ID', 'Date', 'Status'];
       const headerRow = document.createElement('tr');
       headers.forEach((headerText) => {
         const headerCell = document.createElement('th');
